--- a/src/app/components/clientes/clientes.component.html
+++ b/src/app/components/clientes/clientes.component.html
@@ -6,34 +6,36 @@
         <a class="btn btn-primary" [routerLink]="['/mi-tienda/clientes/agregar']"
           routerLinkActive="router-link-active">Nuevo <i class="fas fa-plus"></i></a>
       </div>
-      <table class="table table-hover">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Nombres</th>
-            <th scope="col">Apellidos</th>
-            <th scope="col">Acciones</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="clientes in clientesShow track by $index" *ngFor="let clientes of list">
-            <td>{{ clientes.id }}</td>
-            <td>{{ clientes.nombre }}</td>
-            <td>{{ clientes.apellidos }}</td>
-            <td>
-              <a class="btn btn-outline-info btn-sm" data-toggle="tooltip" data-placement="top" title="Ver detalles"
-              (click)="verDetalles('/mi-tienda/clientes/mostrar', clientes.id)">
-                <i class="fas fa-eye"></i>
-              </a>
-              &nbsp;
-              <a class="btn btn-outline-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Eliminar"
-              (click)="eliminar(clientes.id)">
-                <i class="fas fa-trash"></i>
-              </a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="over-x">
+        <table class="table table-hover">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nombres</th>
+              <th scope="col">Apellidos</th>
+              <th scope="col">Acciones</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr ng-repeat="clientes in clientesShow track by $index" *ngFor="let clientes of list">
+              <td>{{ clientes.id }}</td>
+              <td>{{ clientes.nombre }}</td>
+              <td>{{ clientes.apellidos }}</td>
+              <td>
+                <a class="btn btn-outline-info btn-sm" data-toggle="tooltip" data-placement="top" title="Ver detalles"
+                (click)="verDetalles('/mi-tienda/clientes/mostrar', clientes.id)">
+                  <i class="fas fa-eye"></i>
+                </a>
+                &nbsp;
+                <a class="btn btn-outline-danger btn-sm" data-toggle="tooltip" data-placement="top" title="Eliminar"
+                (click)="eliminar(clientes.id)">
+                  <i class="fas fa-trash"></i>
+                </a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <ng-template #noData>
       <div class="jumbotron">
