--- a/src/app/components/orden/orden.component.html
+++ b/src/app/components/orden/orden.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-4">
   <h3 class="titulo">Nueva Orden <i class="fas fa-shopping-cart"></i></h3>
   <form [formGroup]="formOrden" (ngSubmit)="realizarOrden()">
-    <div class="row frmBody">
-      <div class="col">
+    <div class="d-flex frmBody">
+      <div class="w-Input">
         <label> Identificador: </label>
         <input type="text" class="form-control" formControlName="id" placeholder="Identificador">
         <div class="alerta-danger" *ngIf="id.invalid && (id.dirty || id.touched || messageError)">
@@ -11,7 +11,8 @@
           </div>
         </div>
       </div>
-
+    </div>
+    <div class="row frmBody">
       <div class="col">
         <label> Clientes: </label>
         <select class="form-control" formControlName="idCliente">
@@ -39,9 +40,9 @@
     <div class="row frmBody mt-4">
       <div class="col">
         <label> Cantidad: </label>
-        <input type="text" class="form-control" formControlName="cantidad" placeholder="Cantidad">
+        <input type="number" class="form-control" formControlName="cantidad" placeholder="Cantidad">
         <div class="alerta-danger" *ngIf="cantidad.invalid && (cantidad.dirty || cantidad.touched || messageError)">
-          <div class="message-alert">
+          <div class="message-alert" *ngIf="cantidad.errors.required">
             Este campo es requerido.
           </div>
         </div>
@@ -56,12 +57,12 @@
         </div>
       </div>
     </div>
-    <div *ngIf="!load; else loading" class="mt-4">
-      <button class="btn btn-info btn-block" type="submit">Enviar</button>
+    <div *ngIf="!load; else loading" class="mt-4 content-btn">
+      <button class="btn btn-info save-w100" type="submit">Enviar</button>
     </div>
     <ng-template #loading>
       <div class="mt-4">
-        <button class="btn btn-info btn-block disabled" type="button"><i class="fas fa-spinner fa-spin"></i></button>
+        <button class="btn btn-info save-w100 disabled" type="button"><i class="fas fa-spinner fa-spin"></i></button>
       </div>
     </ng-template>
   </form>
