--- a/src/app/components/ordenes/ordenes.component.html
+++ b/src/app/components/ordenes/ordenes.component.html
@@ -6,26 +6,28 @@
         <a class="btn btn-primary" [routerLink]="['/mi-tienda/crear-orden']"
           routerLinkActive="router-link-active">Nuevo <i class="fas fa-plus"></i></a>
       </div>
-      <table class="table table-hover">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Cliente</th>
-            <th scope="col">Producto</th>
-            <th scope="col">Cantidad</th>
-            <th scope="col">Fecha</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let clientes of ordenList">
-            <td>{{ clientes.id }}</td>
-            <td>{{ clientes.idCliente }}</td>
-            <td>{{ clientes.idProducto }}</td>
-            <td>{{ clientes.cantidad }}</td>
-            <td>{{ clientes.fecha }}</td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="over-x">
+        <table class="table table-hover">
+          <thead class="thead-dark">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Cliente</th>
+              <th scope="col">Producto</th>
+              <th scope="col">Cantidad</th>
+              <th scope="col">Fecha</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let clientes of ordenList">
+              <td>{{ clientes.id }}</td>
+              <td>{{ clientes.idCliente }}</td>
+              <td>{{ clientes.idProducto }}</td>
+              <td>{{ clientes.cantidad }}</td>
+              <td>{{ clientes.fecha }}</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <ng-template #noData>
       <div class="jumbotron">
