--- a/src/app/components/productos/agregar/agregar.component.html
+++ b/src/app/components/productos/agregar/agregar.component.html
@@ -20,6 +20,8 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="row frmBody">
       <div class="col">
         <label> Descripción: </label>
         <input type="text" class="form-control" formControlName="descripcion" placeholder="Descripción">
@@ -31,7 +33,7 @@
       </div>
       <div class="col">
         <label> Precio: </label>
-        <input type="text" class="form-control" formControlName="precio" placeholder="Precio">
+        <input type="number" class="form-control" formControlName="precio" placeholder="Precio">
         <div class="alerta-danger" *ngIf="precio.invalid && (precio.dirty || precio.touched || errorInput)">
           <div class="message-alert">
             Este campo es requerido.
@@ -39,12 +41,12 @@
         </div>
       </div>
     </div>
-    <div class="mt-4" *ngIf="!load; else loading">
-      <input class="btn btn-info btn-block" type="submit" value="Enviar">
+    <div class="mt-4 content-btn" *ngIf="!load; else loading">
+      <input class="btn btn-info save-w100" type="submit" value="Enviar">
     </div>
     <ng-template #loading>
       <div class="mt-4">
-        <button class="btn btn-info btn-block" type="button"><i class="fas fa-spinner fa-spin"></i></button>
+        <button class="btn btn-info save-w100" type="button"><i class="fas fa-spinner fa-spin"></i></button>
       </div>
     </ng-template>
   </form>
