correcciones de diseño

--- a/src/app/components/orden/orden.component.html
+++ b/src/app/components/orden/orden.component.html
@@ -61,7 +61,7 @@
       <button class="btn btn-info save-w100" type="submit">Enviar</button>
     </div>
     <ng-template #loading>
-      <div class="mt-4">
+      <div class="mt-4 content-btn">
         <button class="btn btn-info save-w100 disabled" type="button"><i class="fas fa-spinner fa-spin"></i></button>
       </div>
     </ng-template>
