--- a/src/app/components/productos/agregar/agregar.component.html
+++ b/src/app/components/productos/agregar/agregar.component.html
@@ -45,7 +45,7 @@
       <input class="btn btn-info save-w100" type="submit" value="Enviar">
     </div>
     <ng-template #loading>
-      <div class="mt-4">
+      <div class="mt-4 content-btn">
         <button class="btn btn-info save-w100" type="button"><i class="fas fa-spinner fa-spin"></i></button>
       </div>
     </ng-template>
