--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -5,17 +5,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-item nav-link" [routerLink]="['mi-tienda']" routerLinkActive="activa">Mi Tienda</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-item nav-link" [routerLink]="['mi-tienda']">Mi Tienda</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-item nav-link" [routerLink]="['mi-tienda/clientes']" routerLinkActive="activa">Clientes</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-item nav-link" [routerLink]="['mi-tienda/clientes']">Clientes</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-item nav-link" [routerLink]="['mi-tienda/productos']" routerLinkActive="activa">Productos</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-item nav-link" [routerLink]="['mi-tienda/productos']">Productos</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-item nav-link" [routerLink]="['mi-tienda/ordenes']" routerLinkActive="activa">Ordenes</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-item nav-link" [routerLink]="['mi-tienda/ordenes']">Ordenes</a>
         </li>
       </ul>
     </div>
